--- a/Template/public/partials/endereco-form.html
+++ b/Template/public/partials/endereco-form.html
@@ -48,7 +48,7 @@
                                 <label for="principal" class="col-sm-2">Principal</label>
                                     <select class="form-control text-left" id="principal" ng-model="vm.cadastro.principal">
                                         <option value="SIM">Sim</option>
-                                        <option value="NÃO">Não</option>
+                                        <option value="NAO">Não</option>
                                     </select>
                                 </div>
                             </div>
